quilt-react/src/about.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  body {
    font-family: Arial, sans-serif;
    overflow-y: auto;
  }

  .about-container {
    background-color: #FEFAE0;
    color: #BC6C25;
  }
  
/* 
  .navbar {
    background-color: #414146;
    width: 100%;
    padding: 10px;
    margin-bottom: 5em;
    display: flex;
    align-items: center;
    justify-content: space-between; 
} */
  
  .navbar-links {
    display: flex;
    justify-content: flex-end;
  }

  .navbar ul {
    display: flex;
    gap: 5em;
    list-style: none;
    margin-right: 2em;
  }
  
  .navbar a {
    text-decoration: none;
    color: #ffffff;
  }

  #logo {
    margin-left: 2em;
    font-weight: 700;
  }

  .about-top-container {
    text-align: center;
    margin: 10% auto;
  }

  .about-top-container h1 {
    font-size: 40px;
    max-width: 60%;
    margin: 0 auto 5% auto;
  }

  .about-top-container p {
    margin: 0 auto;
    line-height: 1.5;
    width: 70%;
  }

  .about-text-container {
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 5% 0%;
    width: 70%;
    line-height: 1.5;
  }

  .about-text-container p{
    font-size: 18px;
  }

  .about-img-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    text-align: center;
    margin: 0 auto;
  }

  .about-img-container img {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    object-fit: cover;

  }

  .about-img-person {
    text-align: center;
    flex: 1;
  }

  .about-img-person h3{
    margin: 5% 0% 1% 0%;
    font-size: 24px;
  }

  .about-img-person p{
    font-size: 16px;
    white-space: nowrap;
  }


  #img2 {
    flex: 1;
    max-width: 40vw;
    justify-content: flex-start;
    align-items: flex-start;
  }

